# sokath

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
data/: seed_messages.txt
docs/: PHASE1.md  TESTBED.md
scripts/: charts.py  cold_reader.py  run_dyad.py
src/ackchannel/: budget.py  metrics.py
src/ackchannel/prompts/: negotiator.md  repair.md
src/sokath/: corpus.py  harness.py  nodes.py
src/sokath/prompts/: judge.md  negotiator.md  repair.md
tests/: test_corpus.py
