[project]
name = "ackchannel"
version = "0.0.1"
description = "Negotiated compression between AI agents, kept honest by escrow, repair, and audit"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
cloud = ["anthropic>=0.40"]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ackchannel = ["prompts/*.md"]
